# SDR_new

./: CMakeLists.txt  CMakeListsWORK.txt  Makefile  README.md  compile_commands.json  deploy_sdrpp.sh  readme.md  sdrpp.desktop
core/: CMakeLists.txt
core/backends/android/: backend.cpp
core/backends/glfw/: backend.cpp
core/libcorrect/tools/: find_conv_optim_poly.c
core/src/: aster_server.cpp  aster_server.h  command_args.cpp  command_args.h  config.cpp  config.h  core.cpp  core.h  module.cpp  module.h  server.cpp  server_protocol.h  version.h
core/src/dsp/: block.h  stream.h
core/src/dsp/demod/: pureIQ.h
core/src/dsp/routing/: splitter.h
core/src/gui/: file_dialogs.h  icons.cpp  icons.h  main_window.cpp  main_window.h  smgui.cpp  tuner.cpp  tuner.h
core/src/gui/dialogs/: credits.cpp  dialog_box.h  loading_screen.cpp
core/src/gui/menus/: display.cpp  display.h  module_manager.cpp  source.cpp  source.h  theme.cpp  vfo_color.cpp
core/src/gui/widgets/: folder_select.cpp  frequency_select.cpp  frequency_select.h  menu.cpp  snr_meter.cpp  snr_meter.h  waterfall.cpp  waterfall.h
core/src/imgui/: imgui_demo.cpp
core/src/signal_path/: iq_frontend.cpp  iq_frontend.h  remote_radio.cpp  remote_radio.h  signal_path.cpp  signal_path.h  sink.cpp  sink.h  source.cpp  source.h
core/src/utils/: freq_formatting.h  networking.cpp  networking.h  wav.cpp  wav.h
decoder_modules/radio/src/: demod.h  main.cpp  radio_interface.h  radio_module.h  rds.cpp
decoder_modules/radio/src/demodulators/: am.h  cw.h  dsb.h  lsb.h  nfm.h  pureIQ.h  raw.h  usb.h  wfm.h
docker_builds/: config.json
misc_modules/frequency_manager/src/: main.cpp  radio_module_interface.h
misc_modules/noise_reduction_logmmse/src/: main.cpp
misc_modules/recorder/src/: main.cpp
misc_modules/recorder_old/src/: recorder_interface.h  recording_work.cpp
misc_modules/scanner2/: CMakeLists.txt
misc_modules/scanner2/src/: main.cpp  recorder_interface.h
misc_modules/scanner3/: CMakeLists.txt
misc_modules/scanner3/src/: main.cpp
misc_modules/supervision4/: CMakeLists.txt
misc_modules/supervision4/src/: main.cpp  manager.h
root_dev/: _config.json  airspy_config.json  audio_sink_config.json  configARM.json  frequency_manager_config.json  radio_config.json  recorder_config.json  remote_ctrl.json  search.json  supervision_config.json
root_dev/res/: ps.json  ps.json.bak
root_dev/res/themes/: dark.json  light.json
sink_modules/audio_sink/: CMakeLists.txt
sink_modules/audio_sink/src/: main.cpp
sink_modules/network_sink/src/: main.cpp
sink_modules/portaudio_sink/: CMakeLists.txt
sink_modules/portaudio_sink/src/: main.cpp
source_modules/airspy_source/src/: main.cpp
source_modules/aster_server_source/: CMakeLists.txt
source_modules/aster_server_source/src/: aster_server_client.cpp  main.cpp
source_modules/audio_source/src/: main.cpp
source_modules/file_source/src/: main.cpp
source_modules/remote_control/: CMakeLists.txt
source_modules/remote_control/src/: connection_manager._cpp  connection_manager._h  main.cpp  tcp_client_arm.cpp  tcp_client_arm.h
source_modules/rfspace_source/src/: main.cpp  rfspace_client.cpp  rfspace_client.h
source_modules/sdrpp_server_source/src/: main.cpp  sdrpp_server_client.cpp  sdrpp_server_client.h
source_modules/tcp_client_source/: CMakeLists.txt
source_modules/tcp_client_source/src/: main.cpp  tcp_client.cpp  tcp_client.h
